import "Common/ComDefine.proto";
import "ProtoBuffer/ComProtocol.proto";
package ProtoBuf;


// login server <--> db proxy

//请求账号登录
message AccountLoginDBRequest{
	required string  plat_user_id	= 1;	//平台用户ID
	required string  plat_user_name = 2;	//平台用户名
	required string  channel		= 3;	//渠道号
	required string  channel_user_id = 4;	//渠道用户id
	required uint32  session_id = 5;		//临时的session id,原样返回的
}

//账号登录返回
message AccountLoginDBResponse{
	required int32	 result          = 1;	//结果,详见ComDefine.proto 
	required uint32  session_id		 = 2;	//临时的session id,原样返回的
	required string  channel_user_id = 3;	//渠道用户id	
	optional string  plat_user_id	 = 4;	//平台用户ID
	optional string  plat_user_name  = 5;	//平台用户名
	optional string  channel		 = 6;	//渠道号
	optional int32   byonline		 = 7;	//是否在线	
	
}

//设置账号在线状态
message AccountSetOnlineFlagDBRequest{
	required string  channel_user_id = 1;	//渠道用户id
	required int32   byonline   = 2;		//在线状态 0 不在线，1 在线
}

//请求玩家角色列表
message CharacterRoleListDBRequest{
	required string  channel_user_id =1;	//帐号唯一标识
}
message CharacterRoleDBBaseInfo{
	required uint32 charID = 1;					//角色ID
	required CharacterDBBaseInfo baseinfo = 2;	//角色基础数据
}
//玩家角色列表返回
message CharacterRoleListDBResponse{
	    enum Result 
	{
        SUCCESS = 0;
        FAILED = 1;
        UNKNOW = 2;
    }
	required Result				result          = 1;
	required string  channel_user_id =2;	//帐号唯一标识
	repeated CharacterRoleDBBaseInfo info =3;	//角色基本信息
}


// center server <--> db proxy

//离线角色数据请求
message OfflineCharacterDBRequest{
	required int32 offset = 1;		//数据库记录的偏移
	required int32 retnum = 2;		//数据库返回的数量
}

message OfflineCharacterDBInfo{
	required uint32 charID = 1;					//角色ID
	required CharacterDBBaseInfo baseinfo = 2;	//角色基础数据
}

message OfflineCharacterDBResponse{
	required int32 retcode = 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required int32 offset = 2;					//数据库记录的偏移
	repeated OfflineCharacterDBInfo info = 3;	//角色基础数据
}

//所有的好友数据请求
message AllFriendDBRequest{
	required int32 offset = 1;		//数据库记录的偏移
	required int32 retnum = 2;		//数据库返回的数量
}

message FriendDBInfo
{
	required uint32 charID = 1;					//角色ID
	required RelationDBInfo data = 2;			//好友数据
}

message AllFriendDBResponse{
	required int32 retcode = 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required int32 offset = 2;					//数据库记录的偏移
	repeated FriendDBInfo info = 3;				//好友数据
}

//保存好友数据
message SaveFriendDBRequest{
	repeated FriendDBInfo info = 1;		//好友数据
}

//请求角色活跃数据DB请求
message ActiveCharacterDBRequest{
	required uint32	srcCharID	= 1; //源角色ID
	required uint32 dstCharID   = 2; //目标角色ID
}

//请求角色活跃数据DB返回
message ActiveCharacterDBResponse{
	required int32 retcode	= 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required uint32 srcCharID = 2;					//源角色ID
	optional ActiveCharacterDBInfo info = 3;		//活跃角色信息
}

message ActiveCharacterDBInfo
{
	required uint32					charID		= 1; //角色ID
	optional CharacterDBBaseInfo    baseData	= 2; //基础数据
	optional CharacterDBEquipData	equipData   = 3; //装备信息
	optional CharacterDBExtendData  extendData	= 4; //扩展信息
}

//--------------------------------------邮件----------------------------------
message OfflineMailList
{
	repeated MailInfo data = 1;
}
//请求global表数据
message GlobalDBRequst{
	required int32 type_id = 1;		//类型ID
}

message OfflineMailDBInfo
{
	required uint32 charID = 1;
	optional OfflineMailList data = 2;
}

message GlobalDBResponse{
	required int32 retcode = 1;		//返回码
	required int32 type_id = 2;		//类型ID
	optional bytes data = 3;		//数据
}

//
message AllOfflineMailDBRequest
{
	required int32 offset = 1;
	required int32 retnum = 2;
}

message AllOfflineMailDBResponse
{
	required int32 retcode = 1;
	required int32 offset = 2;
	repeated OfflineMailDBInfo info = 3;
}

message TradingMailDBInfo
{
	required uint32 charID = 1;					//角色ID
	required MailInfo data = 2;					//邮件数据
}


//所有玩家的未过期的交易邮件数据
message AllTradingMailDBRequest
{
	required int32 offset = 1;		//数据库记录的偏移
	required int32 retnum = 2;		//数据库返回的数量
}

message AllTradingMailDBResponse
{
	required int32 retcode = 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required int32 offset = 2;					//数据库记录的偏移
	repeated TradingMailDBInfo info = 3;		//邮件数据
}

//请求玩家邮件数据
message CharacterMailDBRequest
{
	optional uint32 charID = 1;			//角色ID
}

message CharacterMailDBResponse
{
	optional uint32 charID = 1;			//角色ID
	repeated MailInfo info = 2;			//邮件详细数据
}

message MailDBInfo
{
	required uint32 charID = 1;					//角色ID
	repeated MailInfo data = 2;					//更新的邮件数据
	repeated uint32 deleteMailIds = 3;			//删除的邮件ID
}

//保存玩家在线邮件数据
message SaveMailDBRequest{
	optional MailDBInfo info = 1;		//邮件数据
}

//保存玩家离线邮件数据
message SaveOfflineDBRequest
{
	optional OfflineMailDBInfo info = 1;
}

//加载最大邮件ID
message MaxMailIDRequest
{
	
}

message MaxMailIDResponse
{
	optional uint32 maxMailId = 1;
}

//删除角色邮件数据
message DeleteCharacterMail
{
	required uint32 charID = 1;					//角色ID
}

//-----------------------------------------------------------------------------


//-----------------------------------商城------------------------------------------
//请求玩家商城数据
message CharacterMallDBRequest
{
	optional uint32 charid = 1;			//角色ID
}

//玩家商城数据返回
message CharacterMallDBResponse
{
	required int32 retcode		= 1;			//返回码
	optional uint32 charid		= 2;			//角色ID
	optional AllMallDBData info = 3;			//商城数据
}

//保存玩家商城数据
message CharacterMallDBSaveReq
{
	repeated SingleCharacterMallDB data  = 1;			//商城数据
}
//-----------------------------------------------------------------------------


//保存global表数据
message GlobalDBSetRequest{
	required int32 type_id = 1;		//类型ID
	optional bytes data = 2;		//数据
}
message GlobalDBSetResponse{
	required int32 retcode = 1;		//返回码
	required int32 type_id = 2;		//类型ID
}


//请求所有角色阵营离线DB数据（简要数据）
message AllCharacterCampOfflineDBReq{
	required int32 offset = 1;		//数据库记录的偏移
	required int32 retnum = 2;		//数据库返回的数量
}
//所有角色阵营离线DB数据返回
message AllCharacterCampOfflineDBRsp{
	required int32 retcode = 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required int32 offset = 2;					//数据库记录的偏移
	repeated CharacterCampDBData info = 3;		//角色阵营数据
}


//请求角色阵营数据（详细数据）
message CharacterCampDBReq{
	required uint32 charid = 1;		//角色ID
}
//角色阵营数据DB返回
message CharacterCampDBRsp{
	required int32 retcode = 1;					//返回码，详见 ComProtocol.proto ERetCode枚举
	required uint32 charid = 2;					//角色ID
	optional CharacterCampDBData info = 3;		//角色阵营数据
}


//保存角色阵营数据
message CharacterCampDBSetRequest{
	repeated CharacterCampDBData data = 1;		//角色阵营数据
}



// logic server <--> db proxy
// 璇锋瑙插琛
message CharacterListRequest 
{
    required uint64 requestid       = 1;
    required uint32 groupid         = 2;
    required string channelid       = 3;
    required string userid          = 4;
    required string channel_user_id = 5;        // db m_channel_user_id
}

message CharacterListResponse
{
    enum Result 
	{
        SUCCESS = 0;
        FAILED = 1;
        UNKNOW = 2;
    }
    required Result				result          = 1;
    required uint64				requestid       = 2;
    repeated CharacterDBInfo	charInfoList	= 3;
}

message CreateCharacterRequest
{
    required uint64 requestid			= 1;
    required uint32 groupid				= 2;
    required string channelid			= 3;
    required string name				= 4;        // character name
    required string userid              = 5;
    required string channel_user_id     = 6;        // db m_channel_user_id
    required CharacterDBInfo charInfo	= 7;
}

message CreateCharacterResponse
{
    enum Result 
	{
        SUCCESS = 0;
        NAME_EXISTS = 1;
        TOO_MANAY_CHARACTER = 2;
        UNKNOW = 3;
    }
    required Result     result			= 1;
    required uint64     requestid		= 2;
    optional CharacterDBInfo charInfo	= 3;
}

message CharacterInfoRequest
{
    required uint64 requestid       = 1;
    required uint32 charID			= 2;
	required uint32 reqCharID		= 3;
}

message CharacterInfoResponse 
{
    enum Result 
	{
        SUCCESS = 0;
        NOT_EXIST = 1;
        FAILED = 2;
        UNKNOW = 3;
    }
    required Result result				= 1;
    required uint64 requestid			= 2;
	required uint32 reqCharID			= 3;
    optional CharacterDBInfo charInfo	= 4;
}

message CharacterInfoUpdateRequest 
{
    required uint64 requestid			= 1;
    required uint32 groupid				= 2;
    required string channelid			= 3;
    required string userid				= 4;
    required string channel_user_id     = 5;        // db m_channel_user_id
    required CharacterDBInfo charInfo	= 6;
}

message CharacterInfoUpdateResponse
{
    enum Result 
	{
        SUCCESS = 0;
        FAILED = 1;
        UNKNOW = 2;
    }
    required Result result         = 1;
	required uint32 charId	       = 2;
}


message CharacterDelDBRequst{
	required uint64 requestid			= 1;
    required uint32 groupid				= 2;
    required string channelid			= 3;
	required string user_id				= 4;
    required string channel_user_id     = 5;        // db m_channel_user_id
	required uint32 charID				= 6;		//角色ID
}

message CharacterDelDBResponse{
	required int32 retcode				= 1;		//返回码
	required uint64 requestid			= 2;
	optional uint32 groupid				= 3;
    optional string channelid			= 4;
	optional string user_id				= 5;
    optional string channel_user_id     = 6;        // db m_channel_user_id
	optional uint32 charID				= 7;		//角色ID


}